tests/baselines/reference/typeAssertionsWithUnionTypes01.errors.txt
tests/cases/conformance/types/typeRelationships/matchable/typeAssertionsWithUnionTypes01.ts(13,9): error TS2352: Neither type 'I1' nor type 'number | I2' is assignable to the other.
  Type 'I1' is not assignable to type 'I2'.
    Property 'p2' is missing in type 'I1'.
tests/cases/conformance/types/typeRelationships/matchable/typeAssertionsWithUnionTypes01.ts(14,9): error TS2352: Neither type 'I1' nor type 'number' is assignable to the other.
tests/cases/conformance/types/typeRelationships/matchable/typeAssertionsWithUnionTypes01.ts(16,9): error TS2352: Neither type 'number | I2' nor type 'I1' is assignable to the other.
  Type 'number' is not assignable to type 'I1'.


==== tests/cases/conformance/types/typeRelationships/matchable/typeAssertionsWithUnionTypes01.ts (3 errors) ====
    interface I1 {
        p1: number
    }
    
    interface I2 extends I1 {
        p2: number;
    }
    
    var x = { p1: 10, p2: 20 };
    var y: number | I2 = x;
    var z: I1 = x;
    
    var a = <number | I2>z;
            ~~~~~~~~~~~~~~
!!! error TS2352: Neither type 'I1' nor type 'number | I2' is assignable to the other.
!!! error TS2352:   Type 'I1' is not assignable to type 'I2'.
!!! error TS2352:     Property 'p2' is missing in type 'I1'.
    var b = <number>z;
            ~~~~~~~~~
!!! error TS2352: Neither type 'I1' nor type 'number' is assignable to the other.
    var c = <I2>z;
    var d = <I1>y;
            ~~~~~
!!! error TS2352: Neither type 'number | I2' nor type 'I1' is assignable to the other.
!!! error TS2352:   Type 'number' is not assignable to type 'I1'.
    